image/configs/envoy-1001110.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 7000

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 127.0.0.1, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          
          add_user_agent: true
          
          
          
          set_current_client_cert_details: 
            subject: true
            cert: true
            chain: true
            dns: true
            uri: true
          
          
          forward_client_cert_details: ALWAYS_FORWARD_ONLY
          
          
          use_remote_address: true
          
          
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: 
                  prefix: "/"
                route: 
                  cluster: local_service
          http_filters:
          - name: envoy.router
  clusters:
  - name: local_service
    connect_timeout: 0.25s
    type: STATIC
    load_assignment:
      cluster_name: local_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8001
